[gd_scene load_steps=42 format=3 uid="uid://catmh6bdnn6fa"]

[ext_resource type="Material" uid="uid://cqrht8riym6nn" path="res://assets/shaders/posterize_canvas.tres" id="1_sq7yr"]
[ext_resource type="PackedScene" uid="uid://d2tor451umskh" path="res://player/player.tscn" id="1_vvh5c"]
[ext_resource type="PackedScene" uid="uid://ctnywjwuiyrka" path="res://player/hud/player_hud.tscn" id="1_ynlg5"]
[ext_resource type="Environment" uid="uid://blb6sexedwx1w" path="res://environment/world_environment.tres" id="2_r3r3k"]
[ext_resource type="PackedScene" uid="uid://c76i00ukwlksk" path="res://assets/furniture/table_01/table_01.tscn" id="5_l8v81"]
[ext_resource type="PackedScene" uid="uid://btj7p6v75j8f2" path="res://environment/lamps/lamp.tscn" id="6_vyht1"]
[ext_resource type="PackedScene" uid="uid://c5rkeo6ndeq1d" path="res://revolver/mockup/revolver_table_mockup.tscn" id="7_vte5o"]
[ext_resource type="PackedScene" uid="uid://b33dr7k4v11mv" path="res://dealer/dealer.tscn" id="8_bf3um"]
[ext_resource type="PackedScene" uid="uid://bipg2ekrwq3vr" path="res://environment/table/choice_labels.tscn" id="9_r3r3k"]
[ext_resource type="PackedScene" uid="uid://ci6kjbj6cbjwm" path="res://environment/monitors/quequed_monitor_3d.tscn" id="11_po8fv"]
[ext_resource type="FontFile" uid="uid://cwh03mx6kuelx" path="res://assets/fonts/HelpMe-Yz7Lq.ttf" id="12_obcww"]
[ext_resource type="Script" uid="uid://dfrwjwp73xpko" path="res://common/states/state_machine.gd" id="12_qw60f"]
[ext_resource type="Script" uid="uid://ri6a1tiv3y61" path="res://gameloop/states/gameplay_state.gd" id="13_eji0w"]
[ext_resource type="PackedScene" uid="uid://dac88b174qeox" path="res://player/patrons/bullets.tscn" id="13_po8fv"]
[ext_resource type="Script" uid="uid://cr7ypn0soa8ln" path="res://gameloop/states/intro_state.gd" id="13_qwhpj"]
[ext_resource type="Script" uid="uid://cdgedpgmh1mco" path="res://gameloop/states/dealer_force_over_state.gd" id="16_po8fv"]
[ext_resource type="Script" uid="uid://cy6wfx5xalpb6" path="res://gameloop/states/game_over_state.gd" id="16_r3r3k"]
[ext_resource type="AudioStream" uid="uid://dbuboxh6nrwe" path="res://assets/sfx/music_main_menu.ogg" id="16_sq7yr"]
[ext_resource type="AudioStream" uid="uid://uuj0ag6xyihm" path="res://assets/sfx/kill_self_headshot.ogg" id="17_blcw0"]
[ext_resource type="Script" uid="uid://cgft3pjty81e4" path="res://gameloop/states/shader_warmup_state.gd" id="17_cr30j"]
[ext_resource type="Material" uid="uid://c2pwktt4url0j" path="res://revolver/components/M_invalid_hover.tres" id="18_xu2l0"]
[ext_resource type="Material" uid="uid://co6vubjtgme2c" path="res://revolver/components/M_valid_hover.tres" id="19_lci31"]
[ext_resource type="Material" uid="uid://crr2rtuyv5uib" path="res://assets/revolver/M_revolver.tres" id="20_f6va0"]
[ext_resource type="Script" uid="uid://cnkfjgrw7evpu" path="res://gameloop/monitor_controller.gd" id="21_ub8w1"]
[ext_resource type="Script" uid="uid://cpelv7p3e1pqj" path="res://common/audio/smooth_audio_stream_player.gd" id="21_vte5o"]
[ext_resource type="Script" uid="uid://bjd1hlgp5pw0k" path="res://gameloop/states/wining_state.gd" id="23_0dnjj"]
[ext_resource type="Script" uid="uid://pdty0hrt0vly" path="res://gameloop/game_session.gd" id="23_ub8w1"]
[ext_resource type="FontFile" uid="uid://br68hnl47e3yy" path="res://assets/fonts/BigScratchBrush-wo50z.ttf" id="23_uk3k5"]
[ext_resource type="Script" uid="uid://b7yful5yxqc8a" path="res://gameloop/states/game_reload_state.gd" id="24_uwexw"]
[ext_resource type="Material" uid="uid://b5n5nl6mjkxew" path="res://assets/bullet/m_dummy_bullet.tres" id="25_623xu"]
[ext_resource type="Material" uid="uid://bxkpry05bigx1" path="res://assets/bullet/m_marked_bullet.tres" id="27_ans7r"]
[ext_resource type="AudioStream" uid="uid://bo6sdwx3p1hql" path="res://assets/sfx/money/earn_01.ogg" id="27_obcww"]
[ext_resource type="AudioStream" uid="uid://d0lvdymk7rqop" path="res://assets/sfx/money/earn_02.ogg" id="28_mh7w8"]
[ext_resource type="AudioStream" uid="uid://b7a3m8ghbty1g" path="res://assets/sfx/load_04.ogg" id="28_ql764"]
[ext_resource type="AudioStream" uid="uid://cigj2lo5movwm" path="res://assets/sfx/global/winning_looped.ogg" id="37_0aysq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf3um"]

[sub_resource type="PlaneMesh" id="PlaneMesh_sc48t"]

[sub_resource type="Animation" id="Animation_ub8w1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/IntroState/AnimationPlayer/WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}

[sub_resource type="Animation" id="Animation_po8fv"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/IntroState/AnimationPlayer/WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynlg5"]
_data = {
&"RESET": SubResource("Animation_ub8w1"),
&"intro": SubResource("Animation_po8fv")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_623xu"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 2
stream_0/stream = ExtResource("27_obcww")
stream_1/stream = ExtResource("28_mh7w8")

[node name="Root" type="Node"]

[node name="Player HUD" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_ynlg5")]
player = NodePath("../SubViewportContainer/SubViewport/World3D/Play Room/Player")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
msaa_3d = 3
physics_object_picking = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Post Processing" type="PanelContainer" parent="SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bf3um")

[node name="Posterize Canvas" type="ColorRect" parent="SubViewportContainer/SubViewport/Post Processing"]
material = ExtResource("1_sq7yr")
layout_mode = 2
mouse_filter = 2

[node name="World3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/World3D"]
environment = ExtResource("2_r3r3k")

[node name="Play Room" type="Node3D" parent="SubViewportContainer/SubViewport/World3D"]

[node name="Player" parent="SubViewportContainer/SubViewport/World3D/Play Room" node_paths=PackedStringArray("bullets") instance=ExtResource("1_vvh5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.340213, 3.96272, 2.80201)
bullets = NodePath("../Table/Player Bullets")

[node name="Table" parent="SubViewportContainer/SubViewport/World3D/Play Room" instance=ExtResource("5_l8v81")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.176646, 0)

[node name="Choice Labels" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table" node_paths=PackedStringArray("monitor") instance=ExtResource("9_r3r3k")]
monitor = NodePath("../Quequed Monitor3D")

[node name="Revolver Table Mockup" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table" instance=ExtResource("7_vte5o")]
transform = Transform3D(-2.18557e-08, 0.5, 0.866026, -1, -4.37114e-08, -4.24626e-15, 3.78552e-08, -0.866026, 0.5, 0.231696, 4.12209, 0.381624)

[node name="Quequed Monitor3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table" instance=ExtResource("11_po8fv")]
transform = Transform3D(0.902187, 0, 0.431346, 0, 1, 0, -0.431346, 0, 0.902187, -1.7803, 4.0558, -1.2514)

[node name="Lamp" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table" instance=ExtResource("6_vyht1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.176646, 0)

[node name="Player Bullets" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table" instance=ExtResource("13_po8fv")]
transform = Transform3D(0.999636, 0, -0.026997, 0, 1, 0, 0.026997, 0, 0.999636, -1.14361, 4.14031, 0.759733)

[node name="Labels" type="Node3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table"]

[node name="13 Label" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.6880435, -0.7256665, -0.002075489, -0.0052043754, -0.007794536, 0.9999561, -0.7256509, -0.6880024, -0.009139623, -0.90560037, 4.056409, 1.6207736)
shaded = true
modulate = Color(0.79, 0.31599998, 0.31599998, 0.63529414)
outline_modulate = Color(0.51, 0, 0, 0.3372549)
text = "13"
font = ExtResource("12_obcww")
outline_size = 2

[node name="13Max Label" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.89817023, -0.43964615, 0.0012476309, -0.0052043744, -0.0077945357, 0.9999561, -0.43961725, -0.89813715, -0.009288903, -0.6360237, 4.056409, 1.460151)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "max"
font = ExtResource("12_obcww")
outline_size = 2

[node name="13Max Label2" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.92111766, 0.38920602, 0.007827865, -0.005204375, -0.0077945353, 0.9999561, 0.38924986, -0.9211176, -0.00515411, 0.36910802, 4.056409, 1.293247)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "RMB"
font = ExtResource("12_obcww")
outline_size = 2

[node name="13Max Label7" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.9951855, -0.097912654, 0.0044163265, -0.0052043744, -0.0077945353, 0.9999562, -0.097874194, -0.99516445, -0.008266581, -0.9970591, 4.056409, 1.2947751)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "RMB bullet?"
font = ExtResource("12_obcww")
font_size = 20
outline_size = 2

[node name="13Max Label3" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.9483395, -0.31724796, 0.0024628208, -0.005204375, -0.0077945353, 0.9999561, -0.31721503, -0.9483105, -0.009042944, 0.2642116, 4.056409, 1.5100335)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "LMB"
font = ExtResource("12_obcww")
outline_size = 2

[node name="13Max Label4" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.7508489, 0.6604122, 0.009055701, -0.0052043744, -0.0077945367, 0.999956, 0.6604537, -0.7508627, -0.0024154861, -0.04376155, 4.056409, 1.575508)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "wheel"
font = ExtResource("12_obcww")
font_size = 16
outline_size = 2

[node name="13Max Label5" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.94939536, 0.313997, 0.007388792, -0.005204375, -0.0077945367, 0.99995595, 0.31404054, -0.94939196, -0.005765939, -0.26531103, 4.056409, 1.5835102)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "Q?"
font = ExtResource("12_obcww")
font_size = 16
outline_size = 2

[node name="13Max Label6" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.98742485, 0.15796113, 0.006370439, -0.005204376, -0.0077945376, 0.99995595, 0.15800357, -0.98741466, -0.006874432, -0.11704382, 4.056409, 1.6643832)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "E?"
font = ExtResource("12_obcww")
font_size = 16
outline_size = 2

[node name="Modifier Labels" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.8927768, 0.45042503, 0.008157559, -0.005204374, -0.0077945343, 0.99995595, 0.45046887, -0.89278007, -0.0046146023, 1.282296, 4.056409, 1.3375815)
shaded = true
modulate = Color(1, 1, 1, 0.43137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "1-x2
2-x3
4-x4
6-x5"
font = ExtResource("12_obcww")
outline_size = 2

[node name="Shop Label" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.8927768, 0.45042503, 0.008157559, -0.005204374, -0.0077945343, 0.99995595, 0.45046887, -0.89278007, -0.0046146023, 1.3929112, 4.0564094, 0.20555055)
shaded = true
modulate = Color(1, 1, 1, 0.34901962)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "percent
roll"
font = ExtResource("12_obcww")
outline_size = 2

[node name="No Label" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.9406558, -0.33935413, 0.0022505163, -0.005204374, -0.0077945343, 0.99995595, -0.3393216, -0.94062614, -0.009098103, 0.45784035, 4.056409, 0.5849376)
shaded = true
modulate = Color(1, 1, 1, 0.3137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "no"
font = ExtResource("12_obcww")
outline_size = 2

[node name="No Label2" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.9876114, 0.15678883, 0.006362276, -0.005204373, -0.0077945334, 0.99995595, 0.15683168, -0.98760116, -0.006881987, -0.24325898, 4.056409, 0.5232877)
shaded = true
modulate = Color(1, 1, 1, 0.1764706)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "no"
font = ExtResource("12_obcww")
outline_size = 2

[node name="Percent Label" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.7714382, -0.63630337, -0.0009448794, -0.005204373, -0.0077945334, 0.99995595, -0.6362827, -0.77139926, -0.009324565, -1.3801496, 4.0708804, -0.034596324)
shaded = true
modulate = Color(1, 1, 1, 0.20392157)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "5%"
font = ExtResource("12_obcww")
outline_size = 2

[node name="No Label3" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.99997246, -0.0052910447, 0.005163217, -0.005204373, -0.0077945334, 0.99995595, -0.0052503794, -0.99995536, -0.00782186, 0.6208613, 4.056409, 0.25770277)
shaded = true
modulate = Color(1, 1, 1, 0.27450982)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "no"
font = ExtResource("12_obcww")
outline_size = 2

[node name="No Label4" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/Play Room/Table/Labels"]
transform = Transform3D(0.93046767, 0.36629245, 0.0076979212, -0.0052043726, -0.0077945334, 0.99995595, 0.36633655, -0.9304669, -0.005346243, -0.5029478, 4.056409, 0.03179565)
shaded = true
modulate = Color(1, 1, 1, 0.3137255)
outline_modulate = Color(0, 0, 0, 0.3372549)
text = "no"
font = ExtResource("12_obcww")
outline_size = 2

[node name="Dealer" parent="SubViewportContainer/SubViewport/World3D/Play Room" instance=ExtResource("8_bf3um")]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, -3.68618)

[node name="GameLoop" type="Node" parent="SubViewportContainer/SubViewport/World3D"]

[node name="StateMachine" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop" node_paths=PackedStringArray("initial_state")]
script = ExtResource("12_qw60f")
initial_state = NodePath("ShaderWarmupState")
metadata/_custom_type_script = "uid://dfrwjwp73xpko"

[node name="ShaderWarmupState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine"]
script = ExtResource("17_cr30j")
metadata/_custom_type_script = "uid://cgft3pjty81e4"

[node name="Materials" type="Node3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 5.159898, -0.43695903)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
mesh = SubResource("PlaneMesh_sc48t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("18_xu2l0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
mesh = SubResource("PlaneMesh_sc48t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("19_lci31")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
mesh = SubResource("PlaneMesh_sc48t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("20_f6va0")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
mesh = SubResource("PlaneMesh_sc48t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("25_623xu")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
mesh = SubResource("PlaneMesh_sc48t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("27_ans7r")

[node name="Label3D" type="Label3D" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/ShaderWarmupState/Materials"]
transform = Transform3D(1, 0, 0, 0, 1, 1.0658141e-14, 0, -1.0658141e-14, 1, 0, 0.22269435, 0.87252235)
shaded = true
modulate = Color(1, 1, 1, 0.4)
text = "[GAMEPLAY_DEALER]"
font = ExtResource("23_uk3k5")
font_size = 90
outline_size = 0
uppercase = true

[node name="IntroState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine" node_paths=PackedStringArray("session", "revolver_table_mockup", "player", "main_theme_audio", "player_bullets", "player_hud", "intro_animation")]
script = ExtResource("13_qwhpj")
session = NodePath("../../GameSession")
revolver_table_mockup = NodePath("../../../Play Room/Table/Revolver Table Mockup")
player = NodePath("../../../Play Room/Player")
main_theme_audio = NodePath("../../Main Theme Audio Player")
player_bullets = NodePath("../../../Play Room/Table/Player Bullets")
player_hud = NodePath("../../../../../../Player HUD")
intro_animation = NodePath("AnimationPlayer")
metadata/_custom_type_script = "uid://cr7ypn0soa8ln"

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/IntroState"]
root_node = NodePath("../../../../../../..")
libraries = {
&"": SubResource("AnimationLibrary_ynlg5")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/IntroState/AnimationPlayer"]
environment = ExtResource("2_r3r3k")

[node name="GameplayState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine" node_paths=PackedStringArray("choices", "dealer", "player", "monitor_controller", "session", "cash_audio_player", "player_hud", "bet_dialog", "revolver_table_mockup", "dealer_revolver_pose")]
script = ExtResource("13_eji0w")
choices = NodePath("../../../Play Room/Table/Choice Labels")
dealer = NodePath("../../../Play Room/Dealer")
player = NodePath("../../../Play Room/Player")
monitor_controller = NodePath("../../Monitor Controller")
session = NodePath("../../GameSession")
cash_audio_player = NodePath("Cash Audio Player")
player_hud = NodePath("../../../../../../Player HUD")
bet_dialog = NodePath("../../../../../../Player HUD/Bet Dialog")
revolver_table_mockup = NodePath("../../../Play Room/Table/Revolver Table Mockup")
dealer_revolver_pose = NodePath("../../../Play Room/Dealer/Revolver")
metadata/_custom_type_script = "uid://ri6a1tiv3y61"

[node name="Cash Audio Player" type="AudioStreamPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/GameplayState"]
stream = SubResource("AudioStreamRandomizer_623xu")
volume_db = -18.0
pitch_scale = 1.1

[node name="DealerForceOverState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine" node_paths=PackedStringArray("session", "monitor", "dealer", "player")]
script = ExtResource("16_po8fv")
session = NodePath("../../GameSession")
monitor = NodePath("../../Monitor Controller")
dealer = NodePath("../../../Play Room/Dealer")
player = NodePath("../../../Play Room/Player")
metadata/_custom_type_script = "uid://cdgedpgmh1mco"

[node name="GameOverState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine" node_paths=PackedStringArray("session", "player_hud", "selfshot_audio", "main_theme_audio")]
script = ExtResource("16_r3r3k")
session = NodePath("../../GameSession")
player_hud = NodePath("../../../../../../Player HUD")
selfshot_audio = NodePath("Game Over Audio")
main_theme_audio = NodePath("../../Main Theme Audio Player")
metadata/_custom_type_script = "uid://cy6wfx5xalpb6"

[node name="Game Over Audio" type="AudioStreamPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/GameOverState"]
stream = ExtResource("17_blcw0")

[node name="WiningState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine" node_paths=PackedStringArray("dealer", "player", "monitor", "player_hud", "game_session", "main_theme", "switch_audio_player", "winning_audio_player")]
script = ExtResource("23_0dnjj")
dealer = NodePath("../../../Play Room/Dealer")
player = NodePath("../../../Play Room/Player")
monitor = NodePath("../../../Play Room/Table/Quequed Monitor3D")
player_hud = NodePath("../../../../../../Player HUD")
game_session = NodePath("../../GameSession")
main_theme = NodePath("../../Main Theme Audio Player")
switch_audio_player = NodePath("Switch Audio Player")
winning_audio_player = NodePath("Winning Audio Player")
metadata/_custom_type_script = "uid://bjd1hlgp5pw0k"

[node name="Switch Audio Player" type="AudioStreamPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/WiningState"]
stream = ExtResource("28_ql764")
volume_db = 6.0
pitch_scale = 0.8

[node name="Winning Audio Player" type="AudioStreamPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine/WiningState"]
stream = ExtResource("37_0aysq")
playback_type = 1
script = ExtResource("21_vte5o")
initial_db = -30.0

[node name="GameReloadState" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop/StateMachine"]
script = ExtResource("24_uwexw")
metadata/_custom_type_script = "uid://b7yful5yxqc8a"

[node name="Main Theme Audio Player" type="AudioStreamPlayer" parent="SubViewportContainer/SubViewport/World3D/GameLoop"]
stream = ExtResource("16_sq7yr")
playback_type = 1
script = ExtResource("21_vte5o")
metadata/_custom_type_script = "uid://cpelv7p3e1pqj"

[node name="Monitor Controller" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop" node_paths=PackedStringArray("session", "player", "revolver_mockup", "bullets", "monitor_3d", "choices", "profit_timer")]
script = ExtResource("21_ub8w1")
session = NodePath("../GameSession")
player = NodePath("../../Play Room/Player")
revolver_mockup = NodePath("../../Play Room/Table/Revolver Table Mockup")
bullets = NodePath("../../Play Room/Table/Player Bullets")
monitor_3d = NodePath("../../Play Room/Table/Quequed Monitor3D")
choices = NodePath("../../Play Room/Table/Choice Labels")
profit_timer = NodePath("Profit Timer")
metadata/_custom_type_script = "uid://cnkfjgrw7evpu"

[node name="Profit Timer" type="Timer" parent="SubViewportContainer/SubViewport/World3D/GameLoop/Monitor Controller"]
wait_time = 4.0
one_shot = true

[node name="GameSession" type="Node" parent="SubViewportContainer/SubViewport/World3D/GameLoop"]
script = ExtResource("23_ub8w1")
initial_bullets_count = 7
modifier_per_bullet = Array[int]([2, 3, 3, 4, 4, 5])
metadata/_custom_type_script = "uid://pdty0hrt0vly"
